--- a/style.css
+++ b/style.css
@@ -9,6 +9,11 @@ header {
     background: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.4)), url("Images/17.jpg");
     background-size: cover;
     height: 100vh;
-    
+}
 
+.header-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
 }
