--- a/style.css
+++ b/style.css
@@ -17,3 +17,12 @@ header {
     left: 50%;
     transform: translate(-50%,-50%);
 }
+
+
+.header-text h1 {
+    color: #fff;
+    font-size: 50px;
+    text-transform: uppercase;
+    letter-spacing: 1.5px;
+    word-spacing: 6px;
+}
