header - nav bar

--- a/style.css
+++ b/style.css
@@ -12,9 +12,6 @@
 }
 
 
-
-
-
 /***** HEADER *****/
 
 header {
@@ -23,10 +20,41 @@ header {
     height: 100vh;
 }
 
+#logo img {
+    width: 100px;
+    position: absolute;
+    top: 2%;
+    margin-top: 10px;
+}
+
+nav ul {
+    float: right;
+    margin-top: 35px;
+}
+
+nav ul li {
+    display: inline-block;
+    margin-left: 40px;
+}
+
+nav ul li a:link,
+nav ul li a:visited {
+    color: #fff;
+    font-size: 25px;
+    text-decoration: none;
+    border-bottom: 2px solid transparent;
+}
+
+nav ul li a:hover,
+nav ul li a:active {
+    transition: border-bottom 0.5s;
+    border-bottom: 2px solid red;
+}
+
 .header-text {
     position: absolute;
     top: 50%;
-    left: 50%;
+    left: 75%;
     transform: translate(-50%,-50%);
 }
 
