--- a/style.css
+++ b/style.css
@@ -135,3 +135,37 @@ nav ul li a:active {
     border-radius: 10px;
     box-shadow: 4px 6px 10px #000;
 }
+
+.text-smoothie {
+    margin-bottom: 35px;
+}
+
+.text-smoothie div {
+    width: 50px;
+    height: 50px;
+    border: 2px solid #000;
+    text-align: center;
+    border-radius: 50%;
+    padding: 12px;
+    float: left;
+}
+
+.text-smoothie p {
+    margin-left: 60px;
+    font-size: 20px;
+
+} 
+
+
+
+
+
+/***STOP FLOATING***/
+.clearfix {zoom: 1}
+.clearfix:after {
+    content:".";
+    display:block;
+    clear:both;
+    height: 0;
+    visibility: hid;
+   }
