--- a/css/style.css
+++ b/css/style.css
@@ -235,14 +235,42 @@ nav ul li a:active {
 
 }
 
+/*****CONTACT FORM*****/
+.contact-form {
+    width: 700px;
+    text-align: center;
+}
 
+.contact-form input {
+    width: 80%;
+    margin: 5px 0;
+    padding: 7px;
+    border: 2px solid #000;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px grey;
+}
 
+.contact-form textarea {
+    width: 80%;
+    margin: 5px 0;
+    padding: 7px;
+    border: 2px solid #000;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px grey;
+    font-family: Arial;
+}
 
+input[type="submit"] {
+    background: #e7005f;
+    color: #fff;
+    font-size: 20px;
+}
 
-
-
-
-
+input[type="submit"]:hover {
+    transition: background-color 0.5s;
+    background-color: blueviolet;
+    color: rgb(80, 212, 36);
+}
 
 
 
