--- a/css/style.css
+++ b/css/style.css
@@ -221,8 +221,8 @@ nav ul li a:active {
     background-color: #000;
     overflow: hidden;
     height: 340px;
-    
 }
+
 .photo-segment img {
     width: 100%;
     height: 340px;
@@ -239,7 +239,7 @@ nav ul li a:active {
 
 /*****CONTACT FORM*****/
 .contact-form {
-    width: 700px;
+    max-width: 700px;
     text-align: center;
 }
 
@@ -295,9 +295,6 @@ input[type="submit"]:hover {
     margin-right: 20px;
 }
 
-/* .footer-page img { */
-    width: 40px;
-}
 
 .social p a:link,
 .social p a:visited {
