--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
-* {
+html, body {
     margin: 0;
     padding: 0;
+    height: 100%;
+    width: 100%;
     box-sizing: border-box;
 }
 
@@ -32,21 +34,40 @@
 header {
     background: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.4)), url("../Images/1.jpg");
     background-size: cover;
-    height: 100vh;
+    height: 100%;
+    width: 100%;
+    margin: auto;
+    display: table;
+    top: 0;
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
+.nav-background {
+    position: fixed;
+    width: 100%;
+    height: 70px;
+    background-color: rgba(0,0,0,0.7);
+    z-index: 50;
 
+
+
+
+
+}
 #logo img {
     width: 100px;
     position: absolute;
     top: 2%;
     margin-top: 10px;
+    z-index: 200;
 }
 
 nav ul {
     float: right;
     margin-top: 35px;
+    position: fixed;
+    margin-left: 30%;
+    z-index: 100;
 }
 
 nav ul li {
